[tool.poetry]
name = "probaforms"
version = "0.1.0"
description = "Conditional generative models for tabular data with sklearn-like interface."
authors = ["Mikhail Hushchyn <hushchyn.mikhail@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
torch = "^1.11.0"
tqdm = "^4.64.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
