[tool.poetry]
name = "probaforms"
version = "0.2.0"
description = "Synthetic data generation for tables."
readme = "README.md"
authors = ["Mikhail Hushchyn <hushchyn.mikhail@gmail.com>"]
repository = "https://github.com/HSE-LAMBDA/probaforms"
documentation = "https://hse-lambda.github.io/probaforms/"
license = "MIT"

keywords = ["synthetic data", "augmentation", "generative models", "normalizing flows", "VAE", "GAN"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
torch = "^1.11.0"
tqdm = "^4.64.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mknotebooks = "^0.7.1"
markdown-include = "^0.7.0"
python-markdown-math = "^0.8"
mkdocs-material = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
